// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LocationHeader ActionItems should match snapshot 1`] = `
Array [
  HeaderActionItem {
    "_href": Object {
      "payload": Object {
        "city": "augsburg",
        "language": "de",
      },
      "type": "SEARCH",
    },
    "_iconSrc": "test-file-stub",
    "_node": undefined,
    "_text": "search",
  },
  HeaderActionItem {
    "_href": Object {
      "payload": Object {
        "language": "de",
      },
      "type": "LANDING",
    },
    "_iconSrc": "test-file-stub",
    "_node": undefined,
    "_text": "changeLocation",
  },
  HeaderActionItem {
    "_href": undefined,
    "_iconSrc": undefined,
    "_node": <Connect(Translate(LanguageSelector))
      isHeaderActionItem={true}
    />,
    "_text": undefined,
  },
]
`;

exports[`LocationHeader NavigationItems should be empty, if extras and news are both disabled 1`] = `Array []`;

exports[`LocationHeader NavigationItems should show categories, if extras or news are enabled 1`] = `
Array [
  <HeaderNavigationItem
    active={true}
    href={
      Object {
        "payload": Object {
          "city": "augsburg",
          "language": "de",
        },
        "type": "EXTRAS",
      }
    }
    selected={false}
    text="extras"
  />,
  <HeaderNavigationItem
    active={true}
    href={
      Object {
        "payload": Object {
          "categoryPath": undefined,
          "city": "augsburg",
          "language": "de",
        },
        "type": "CATEGORIES",
      }
    }
    selected={true}
    text="categories"
  />,
]
`;

exports[`LocationHeader NavigationItems should show categories, if extras or news are enabled 2`] = `
Array [
  <HeaderNavigationItem
    active={true}
    href={
      Object {
        "payload": Object {
          "categoryPath": undefined,
          "city": "augsburg",
          "language": "de",
        },
        "type": "CATEGORIES",
      }
    }
    selected={true}
    text="categories"
  />,
  <HeaderNavigationItem
    active={true}
    href={
      Object {
        "payload": Object {
          "city": "augsburg",
          "language": "de",
        },
        "type": "EVENTS",
      }
    }
    selected={false}
    text="news"
    tooltip="noNews"
  />,
]
`;

exports[`LocationHeader NavigationItems should show extras, categories, events in this order 1`] = `
Array [
  <HeaderNavigationItem
    active={true}
    href={
      Object {
        "payload": Object {
          "city": "augsburg",
          "language": "de",
        },
        "type": "EXTRAS",
      }
    }
    selected={false}
    text="extras"
  />,
  <HeaderNavigationItem
    active={true}
    href={
      Object {
        "payload": Object {
          "categoryPath": undefined,
          "city": "augsburg",
          "language": "de",
        },
        "type": "CATEGORIES",
      }
    }
    selected={true}
    text="categories"
  />,
  <HeaderNavigationItem
    active={true}
    href={
      Object {
        "payload": Object {
          "city": "augsburg",
          "language": "de",
        },
        "type": "EVENTS",
      }
    }
    selected={false}
    text="news"
    tooltip="noNews"
  />,
]
`;

exports[`LocationHeader should match snapshot 1`] = `
<withPlatform(WithTheme(Header))
  actionItems={
    Array [
      HeaderActionItem {
        "_href": Object {
          "payload": Object {
            "city": "augsburg",
            "language": "de",
          },
          "type": "SEARCH",
        },
        "_iconSrc": "test-file-stub",
        "_node": undefined,
        "_text": "search",
      },
      HeaderActionItem {
        "_href": Object {
          "payload": Object {
            "language": "de",
          },
          "type": "LANDING",
        },
        "_iconSrc": "test-file-stub",
        "_node": undefined,
        "_text": "changeLocation",
      },
      HeaderActionItem {
        "_href": undefined,
        "_iconSrc": undefined,
        "_node": <Connect(Translate(LanguageSelector))
          isHeaderActionItem={true}
        />,
        "_text": undefined,
      },
    ]
  }
  logoHref={
    Object {
      "payload": Object {
        "categoryPath": undefined,
        "city": "augsburg",
        "language": "de",
      },
      "type": "CATEGORIES",
    }
  }
  navigationItems={
    Array [
      <HeaderNavigationItem
        active={true}
        href={
          Object {
            "payload": Object {
              "city": "augsburg",
              "language": "de",
            },
            "type": "EXTRAS",
          }
        }
        selected={true}
        text="extras"
      />,
      <HeaderNavigationItem
        active={true}
        href={
          Object {
            "payload": Object {
              "categoryPath": undefined,
              "city": "augsburg",
              "language": "de",
            },
            "type": "CATEGORIES",
          }
        }
        selected={false}
        text="categories"
      />,
      <HeaderNavigationItem
        active={true}
        href={
          Object {
            "payload": Object {
              "city": "augsburg",
              "language": "de",
            },
            "type": "EVENTS",
          }
        }
        selected={false}
        text="news"
        tooltip="noNews"
      />,
    ]
  }
  onStickyTopChanged={[Function]}
  viewportSmall={true}
/>
`;
